--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@garfish/bridge-vue-v3": "^1.17.1",
     "axios": "^1.4.0",
     "element-plus": "^2.3.7",
     "lodash-es": "^4.17.21",
