--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,12 +9,13 @@
     "paths": {
       "@/*": ["./src/*"]
     },
+    "lib": ["ES2020", "dom"],
     "module": "es2020",
     "moduleResolution": "Node",
     "strict": true,
     "target": "ES6",
     "esModuleInterop": true,
     // 指定"types": []来禁用自动引入@types包。
-    "types": ["vite/client"]
+    "types": ["vite/client", "element-plus/global"]
   }
 }
