--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.vue", "global.d.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.vue", "*.d.ts"],
   "exclude": ["src/**/__tests__/*", "node_modules"],
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
+    "allowSyntheticDefaultImports": true,
     "jsxImportSource": "vue",
     "jsx": "preserve",
     "paths": {
