--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.1.0",
+    "@ant-design/icons-vue": "^7.0.1",
     "@garfish/bridge-vue-v3": "^1.17.1",
+    "ant-design-vue": "^4.0.7",
     "axios": "^1.4.0",
-    "element-plus": "^2.3.7",
     "lodash-es": "^4.17.21",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
@@ -46,7 +46,6 @@
     "sass": "^1.63.6",
     "typescript": "~5.0.4",
     "unplugin-auto-import": "^0.16.4",
-    "unplugin-icons": "^0.16.3",
     "unplugin-vue-components": "^0.25.1",
     "vite": "^4.3.9",
     "vitest": "^0.32.0",
