--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "@garfish/bridge-vue-v3": "^1.17.1",
-    "ant-design-vue": "^4.0.6",
+    "ant-design-vue": "^4.1.0",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.10",
     "lodash-es": "^4.17.21",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
@@ -48,6 +49,7 @@
     "unplugin-auto-import": "^0.16.4",
     "unplugin-vue-components": "^0.25.1",
     "vite": "^4.3.9",
+    "vite-plugin-vue-devtools": "^7.0.10",
     "vitest": "^0.32.0",
     "vue-tsc": "^1.6.5"
   },
