--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@garfish/bridge-vue-v3": "^1.17.1",
     "ant-design-vue": "^4.1.0",
     "axios": "^1.4.0",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.10",
     "lodash-es": "^4.17.21",
     "pinia": "^2.1.3",
@@ -29,6 +30,7 @@
     "@commitlint/config-conventional": "^17.6.6",
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.1",
+    "@types/crypto-js": "^4.2.2",
     "@types/jsdom": "^21.1.1",
     "@types/node": "^18.16.17",
     "@vitejs/plugin-vue": "^4.2.3",
