fix: 调试线上环境

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-VITE_APP_BASE='http://127.0.0.1:8880/'
+# 前端地址
+VITE_APP_FE='http://localhost:8090'
+# 服务端地址
+VITE_APP_BASE = http://127.0.0.1:8880/
