--- a/package.json
+++ b/package.json
@@ -4,18 +4,17 @@
   "private": true,
   "scripts": {
     "start": "vite",
-    "build": "run-p type-check build-only",
+    "build": "run-p build-only",
     "preview": "vite preview",
     "test:unit": "vitest",
     "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
+    "type-check": "vue-tsc --noEmit --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
     "prepare": "husky install"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
-    "@garfish/bridge-vue-v3": "^1.17.1",
     "ant-design-vue": "^4.1.0",
     "axios": "^1.4.0",
     "crypto-js": "^4.2.0",
