--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "^4.1.0",
-    "axios": "^1.4.0",
+    "axios": "^1.6.7",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.10",
     "lodash-es": "^4.17.21",
@@ -49,7 +49,7 @@
     "typescript": "~5.0.4",
     "unplugin-auto-import": "^0.16.4",
     "unplugin-vue-components": "^0.25.1",
-    "vite": "^4.3.9",
+    "vite": "^5.1.4",
     "vite-plugin-vue-devtools": "^7.0.10",
     "vitest": "^0.32.0",
     "vue-tsc": "^1.6.5"
@@ -59,5 +59,12 @@
       "prettier --write",
       "eslint --fix"
     ]
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "vite"
+      ]
+    }
   }
 }
