--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "test:unit": "vitest",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint": "eslint . --ext .vue,.js,.jsx,.ts,.tsx, --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
     "prepare": "husky install"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "@fe-lq/micro-kit": "1.0.0-0.4",
     "ant-design-vue": "^4.1.0",
     "axios": "^1.6.7",
     "crypto-js": "^4.2.0",
